# mipath

./: MIPath_vignette.ipynb  README.md  requirements.txt  setup.cfg
data/: name2ensembl_human.txt
doc/: functions.md
mipath/: __init__.py  analysis.py  decomposition.py  pathways.py  scoring.py  significance_test.py
src/mipath/: __init__.py  analysis.py  decomposition.py  pathways.py  significance.py
