[metadata]
name = mipathway
version = 0.0.6
author = Gustavo S. Jeuken
author_email = gjeuken@gmail.com
description = MIPath pathway analysis method
long_description = file: README.md 
long_description_content_type = text/markdown
license = Apache Software Licence 2
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
	numpy
	scipy
	pandas
	scikit-learn
	igraph
	leidenalg
	joblib
	requests
	pynndescent <=0.5.8

[options.packages.find]
where=src
